...
        overlayMotion.requestClose(() => onClick?.(event));
      }}
      style={style}
      disabled={disabled || !isTopmost}
      aria-hidden={!isTopmost || undefined}
      tabIndex={isTopmost ? buttonProps.tabIndex : -1}
      aria-label="Close"
    >
      <img
        src={imageSrc}
        alt="Close"
        className="close-button-image"
      />
...
